--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Mon Oct 04 09:14:13 EDT 2021
-sdk.dir=C\:\\Users\\tranan22\\AppData\\Local\\Android\\Sdk
+sdk.dir=/Users/asharma/Library/Android/SDK
