--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Oct 04 09:14:13 EDT 2021
-sdk.dir=/Users/asharma/Library/Android/SDK
+#Tue Oct 19 09:21:01 EDT 2021
+sdk.dir=C\:\\Users\\tranan22\\AppData\\Local\\Android\\Sdk
