--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Tue Oct 19 09:21:01 EDT 2021
-sdk.dir=C\:\\Users\\tranan22\\AppData\\Local\\Android\\Sdk
+sdk.dir=C\:\\Users\\dd2tr\\AppData\\Local\\Android\\Sdk
