added new gradle dependencies

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,17 @@ dependencies {
     implementation "androidx.camera:camera-lifecycle:$camerax_version"
     implementation "androidx.camera:camera-view:1.0.0-alpha31"
 
+
+    // The following line is optional, as the core library is included indirectly by camera-camera2
+    implementation "androidx.camera:camera-core:1.1.0-alpha11"
+    implementation "androidx.camera:camera-camera2:1.1.0-alpha11"
+    // If you want to additionally use the CameraX Lifecycle library
+    implementation "androidx.camera:camera-lifecycle:1.1.0-alpha11"
+    // If you want to additionally use the CameraX View class
+    implementation "androidx.camera:camera-view:1.0.0-alpha31"
+    // If you want to additionally use the CameraX Extensions library
+    implementation "androidx.camera:camera-extensions:1.0.0-alpha31"
+
 //    implementation 'android.view.SurfaceHolder.Callback'
 }
 //repositories {
