in progress of fixing camera

--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,6 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Wed Dec 01 09:38:54 EST 2021
-sdk.dir=C\:\\Users\\dd2tr\\AppData\\Local\\Android\\Sdk
+sdk.dir= /Users/asharma/Library/Android/SDK
+# /Users/asharma/Library/Android/SDK
+# C\:\\Users\\dd2tr\\AppData\\Local\\Android\\Sdk
