Typo fixes in res/drawable

--- a/local.properties
+++ b/local.properties
@@ -4,7 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Dec 01 09:38:54 EST 2021
-sdk.dir= /Users/asharma/Library/Android/SDK
-# /Users/asharma/Library/Android/SDK
-# C\:\\Users\\dd2tr\\AppData\\Local\\Android\\Sdk
+#Mon Jan 10 21:36:35 EST 2022
+sdk.dir=C\:\\Users\\Austin\\AppData\\Local\\Android\\Sdk
