--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Mon Jan 17 15:43:06 EST 2022
-sdk.dir=C\:\\Users\\Austin\\AppData\\Local\\Android\\Sdk
+sdk.dir=C\:\\Users\\karen\\AppData\\Local\\Android\\Sdk
